--- a/vignettes/Week12_Model_Selection/Week12_vignette_HW.Rmd
+++ b/vignettes/Week12_Model_Selection/Week12_vignette_HW.Rmd
@@ -25,10 +25,6 @@ We will re-analyze a dataset from Goldberg and Waits 2010 using a maximum likeli
 
 In previous labs, you have created genetic distance matrices, so here we are going to start with those data already complete, as are the landscape data. For MLPE, two vectors representing the nodes at the ends of each link must be created. These are already included in the data set (`pop1` and `pop2`). 
 
-Here's a map of the study area. The lines represent those pair-wise links between sampling locations that we will be considering here (graph model: Delaunay triangulation).
-
-![Map of study area](Capture.png)
-
 Each row in the file 'CSF_network.csv' represents a link between two pairs of sampling locations. The columns contain the following variables:
 
 - **Id**: Link ID.
@@ -79,11 +75,14 @@ str(CSFdata)
 - `Id`, `pop1` and `pop2` are vectors of integers, and
 - everything else is a numeric vector, i.e., continuous variable. 
 
-The response Y in our MLPE models will be `logDc.km`, the genetic distance per geographic distance, log transformed to meet normality assumptions. This was used in the paper as a way to include IBD as the base assumption without increasing k. The landscape variables were then also estimated so that they would  not necessarily increase with increasing distance between sites (e.g., proportion of forest between sites).
+The response Y in our MLPE models will be `logDc.km`, the genetic distance per geographic distance, log transformed to meet normality assumptions. 
 
-**This is a pruned network, where the links are only those neighbors in a Delauney trangulation. <Capture.PNG>**
+**NOTE HW: Please explain why you ar using genetic distance per geographic distance, not just genetic distance. Is this  away of building IBD into the null model? What does it mean for how ecologial distances need to be scaled, i.e., do they need to be expressed per km as well? Would this make sense if it is compositional data, such as percent forest along a link?**
 
 For this exercise, you will test 5 alternative hypotheses. At the end, you will be invited to create your own hypotheses from these variables and test support for them.
+
+**NOTE HW: Are this 48 links retained from a graph? There are 20 sites, I believe, but not all links are represented. How about adding a map?**
+
 
 ## 2. Fitting candidate models
 
@@ -162,6 +161,8 @@ usdm::vif(cbind(CSF.df, grass=CSFdata$grass))
 
 **Question 1**:	Why would adding in the last land cover cause a high amount of collinearity? Consider how these data were calculated.
 
+**NOTE HW: I added the text and code below. As we don't have a video to introduce the concepts for the lab, maybe this additional explanation would be helpful?**
+
 The variables 'forest', 'dev', 'shrub', 'ag' and 'grass' together cover almost all land cover types in the study area. Each is measured as percent area, and together, they make up 100% or close to 100% of the land cover types along each link. Thus if we know e.g. that all 'forest', 'dev', 'shrub' and 'ag' together cover 80% along a link, then it is a good bet that 'grass' will cover the remaining 20%. 
 
 With such sets of compositional data, we need to omit one variable to avoid multi-collinearity (where a variable is a linear combination of other variables), even though the pairwise correlations may be low. For example, there the variable 'grass' showed relatively low correlations with the other variables:
@@ -187,7 +188,9 @@ mod_1 <- lme4::lFormula(logDc.km ~ solarinsoz + forest + ag + shrub +
                         dev + (1|pop1), data = CSFdata, REML = TRUE)
 ```
 
-In the fitted model replace Zt slot (matrix for the random effects generated with just pop1) with the ZZ matrix created above:
+In the fitted model replace Zt slot:
+
+**NOTE HW: What is the Zt slot?**
 
 ```{r}
 mod_1$reTrms$Zt <- ZZ
@@ -202,24 +205,22 @@ mod1 <- lme4::mkMerMod(environment(dfun), opt, mod_1$reTrms, fr = mod_1$fr)
 summary(mod1)
 ```
 
-In this output, we focus on the estimates of fixed effects, which we will use later to examine the effect of each variable. Note that there are no p-values because of the nature of these models and the philosophy of the package writers. There are packages available that calculate these but the results may be misleading. 
-This is the closest to a full model in our dataset (although our models are not completely nested), so we will take a look at the residuals:
+**NOTE HW: Can you please explain the output? How would we get p-values, or if we don't do that, why not? Would we need to refit with ML? Or explain that we will use a CI approach later to identify which variables have a 'significant' effect?**
+
+This is the fullest model in our dataset (although our models are not completely nested), so we will take a look at the residuals:
 
 ```{r}
 plot(mod1) 
 ```
 
-Residuals are centered around zero and do not show large groupings or patterns, although there is some increase in variation at larger numbers (so the model is having a more difficult time predicting larger genetic distances per km). We will keep that in mind as we move on.
+Residuals are centered around zero and do not show large groupings or patterns, although there is some increase in variation at larger numbers (so the model is having a more difficult time predicting larger genetic distances per km). 
 
-Next we will check to make sure the residuals are normally distributed. 
+There are many more checks that can be done at this point (referenced in the lecture), but for now we are going to leave evaluating model fit at this and fit the other models.
 
-```{r}
-hist(residuals(mod1)) 
-```
-
-This can also be done with the qqmath function in package lattice if you are more used to seeing qq plots. These residuals look okay so we will move on (but if this were a publication we would do a closer examination of the shape of the data at larger genetic distances). 
+**NOTE HW: I think it would be useful to have some more plots here to have the code, as 'LandGenCourse' will be available independently from the DGS lectures?**
 
 Now we will make a function (called MPLE) to fit the rest of our models, so that we are not typing the same code over and over (which causes errors and long code that is difficult to navigate or update):
+
 
 ```{r}
 MLPE <- function(variables, data) {
@@ -252,13 +253,23 @@ Note: package MuMIn will do this for you, but for this exercise it is useful to 
 
 In information theory, we use information criteria (AIC, BIC) to evaluate the relative distance of our hypothesis from truth. For more information, see Burnham and Anderson (2002).
 
-Note: We use extractAIC here in package lme4, which refits the model using REML = FALSE rather than the function AIC, which reverts to a different package and provides the biased estimate from REML = TRUE.
+**NOTE HW: See alternative code below, using named list of models.**
+
+**NOTE HW: In Week 6 worked example, we wrote: "The function ‘extractAIC’ refits the models with ‘REML=FALSE’ to obtain AIC values that are comparable between models with different fixed effects (though this does not apply here because the fixed effects were the same), or between models fitted with ‘lm’ and ‘lmer’." Should we use 'extractAIC' here, as we have different fixed effects in the models? 
 
 ```{r}
+#CSF.IC <- cbind(Model = c(1:5), 
+#                AIC = c(AIC(mod1), AIC(mod2), AIC(mod3), 
+#                        AIC(mod4), AIC(mod5)), 
+#                BIC = c(BIC(mod1), BIC(mod2), BIC(mod3), 
+#                        BIC(mod4), BIC(mod5)))
+#CSF.IC
+
 # Alternative code HW:
 Models <- list(Full=mod1, Landcover=mod2, HumanFootprint=mod3, 
                EnergyConservation=mod4, Historical=mod5)
-CSF.IC <- data.frame(extractAIC = sapply(Models, extractAIC)[2,],
+CSF.IC <- data.frame(extractAIC = sapply(Models, extractAIC)[2,], 
+                     AIC = sapply(Models, AIC),
                      BIC = sapply(Models, BIC)) 
 CSF.IC
 ```
@@ -269,17 +280,25 @@ Now we will work with these a bit. First, because we do not have an infinite num
 
 First, find the k parameters used in the model and add them to the table.
 
+**NOTE HW: Again, see alternative code below, using named list of models.**
 ```{r}
+#CSF.IC <- cbind(CSF.IC, 
+#                k = c(attr(logLik(mod1), "df"), 
+#                      attr(logLik(mod2), "df"), 
+#                      attr(logLik(mod3), "df"), 
+#                      attr(logLik(mod4), "df"), 
+#                      attr(logLik(mod5), "df")))
 CSF.IC <- data.frame(CSF.IC, k = sapply(Models, function(ls) attr(logLik(ls), "df")))
 CSF.IC
 ```
-
 **Question 2**:	How does k relate to the number of parameters in each model?
 
 Now, calculate AICc and add it to the dataframe:
 
 ```{r}
-CSF.IC$AICc <- CSF.IC$extractAIC + 2*CSF.IC$k*(CSF.IC$k+1)/(48-CSF.IC$k-1)
+#CSF.IC<- as.data.frame(CSF.IC)
+CSF.IC$AICc <- CSF.IC$AIC + 2*CSF.IC$k*(CSF.IC$k+1)/(48-CSF.IC$k-1)
+#CSF.IC <- cbind(CSF.IC, AICc = AICc)
 CSF.IC
 ```
 
@@ -289,11 +308,20 @@ Next we calculate evidence weights for each model based on AICc and BIC. These c
 
 Calculate model weights for AICc:
 
+**NOTE HW: Should the label be 'AICew' be 'AICcew'?**
+
+**NOTE HW: See above re 'extractAIC'. Do we need to use it here? I've added it just in case.**
+
 ```{r}
+extractAICmin <- min(CSF.IC$extractAIC)
+RL <- exp(-0.5*(CSF.IC$extractAIC - extractAICmin))
+sumRL <- sum(RL)
+CSF.IC$extractAICmin <- RL/sumRL
+
 AICcmin <- min(CSF.IC$AICc)
 RL <- exp(-0.5*(CSF.IC$AICc - AICcmin))
 sumRL <- sum(RL)
-CSF.IC$AICcmin <- RL/sumRL
+CSF.IC$AICew <- RL/sumRL
 ```
 
 Calculate model weights for BIC:
@@ -305,10 +333,9 @@ sumRL.B <- sum(RL.B)
 CSF.IC$BICew <- RL.B/sumRL.B
 round(CSF.IC,3)
 ```
-
 **Question 3**:	What did using AICc (rather than AIC) do to inference from these results?
 
-In the multi-model inference approach, we can look across all the models in the dataset and their evidence weights to better understand the system. Here we see that models 1 and 5 have very little evidence of being close to the truth, that models 2 and 4 have more, and that model 3 has the most evidence of being the closest to truth, although how much more evidence there is for model 3 over 2 and 4 depends on which criterion you are looking at. BIC imposes a larger penalty for additional parameters, so it has a larger distinction between these. Let's review what these models are:
+In the multi-model inference approach, we can look across all the models in the dataset and their evidence weights to better understand the system. Here we see that models 1 and 5 have very little evidence of being close to the truth, that model 4 has just a little more, and that models 2 and 3 can be seen as competing for which one is closest to truth, at least if you're looking at AIC. BIC imposes a larger penalty for additional parameters, so it has a larger distinction between these. Let's review what these models are:
 
 1.	**Full model**: solarinso, forest, ag, shrub, dev
 2.	**Landcover model**: ag, shrub, forest, and dev
@@ -332,15 +359,105 @@ Now we'll estimate the 95% confidence interval for these estimates:
 confint(Models$Landcover, level = 0.95, method = "Wald")
 ```
 
-In essence, we use the confidence intervals to assess whether we can differentiate the effect of each variable from zero (i.e. statistical significance). The confidence intervals that overlap 0 do not have as much evidence of being important to gene flow, based on simulations in Row et al. (2017). So in this case, there is only strong evidence that agriculture influences the rate of gene flow. Note that because the metric is genetic distance, negative values indicate more gene flow.
+**NOTE HW: I suggest adding the following sencence: "In esssence, we here use the confidence intervals to approximate a statistical significance test."**
 
-**Question 4**:	What evidence is there that shrub and forest matter to gene flow from these analyses? What about slope and shrub? Would you include them in a conclusion about landscape resistance in this system?
+The confidence intervals that overlap 0 do not have as much evidence of being important to gene flow, based on simulations in Row et al. (2017). So in this case, there is only strong evidence that agriculture influences the rate of gene flow. Note that because the metric is genetic distance, negative values indicate more gene flow.
+
+**Question 4**:	What evidence is there that shrub and forest matter to gene flow from these analyses? Would you include them in a conclusion about landscape resistance in this system?
 
 **Question 5**:  What evidence is there that development influences gene flow from these analyses? Would you include it in a conclusion about landscape resistance in this system?
 
-**Question 6**:  We excluded grass from our models because of multicollinearity. How could we investigate the importance of this variable?
+**NOTE HW: We dropped 'grass' to avoid multicollinearity. How can we be sure that 'grass' is not important? Should we add a question about this, or a note?**
 
-## 3. Your turn to test additional hypotheses!
+
+## 3. Optional: Model averaging
+
+**NOTE HW: What is your take on (a) factor importance, and (b) estimating parameters by weighting across models? I've drafted a brief section that uses functions from MuMIn to calculate model weights, factor importance and model-averaged estimates and CIs. It's up to you if you want to include this or not, and if so, please feel free to edit.**
+
+### a) Model selection with package 'MuMIn'
+
+The package MuMIn makes it easy to create a table for model comparison with the function 'model.sel'. With the argument `rank`, you can specify which criterion to use.
+
+```{r}
+Models.table <- MuMIn::model.sel(Models, rank="AICc")
+Models.table
+```
+
+Note: In the first few columns, the table lists, for each predictor in a model, its parameter estimate. This makes it easy to check to what degree the slope estimates depend on which other variables are in the model. 
+
+### b) Select a subset of models for averaging
+
+We could take this one step further and estimate parameters and their confidence intervals not just from the best model but from a subset of models that have high model weights. Two commonly used definitions of such a subset include:
+
+- `subset=cumsum(weight) <= .95`: The subset of highest-ranked models that together account for at least 95% of model weights. 
+- `subset=delta < 4`: The subset of all models that have a delta value greater than 4. 
+
+```{r}
+Subset <- MuMIn::get.models(Models.table, cumsum(weight) <= .95)
+```
+
+Now we can estimate parameters as a weighted mean of the estimates from the models in the subset, with weights proportional to their model weight.
+
+```{r}
+Models.avg <- MuMIn::model.avg(Subset)
+Models.avg
+```
+We get two rows of coefficients. The naming is confusing, as both are calculated from the same subset of models as defined above. Here, subset refers to a subset of parameters, not models:
+
+- **full**: In each model, slope coefficients for predictors that are not included in the model are estimated to be zero and then included in the averaging across models.
+- **subset**: In each model, slope coefficients for predictors that are not included in the model are set to NA, i.e., these estimates are not included in the averaging. Thus, for each predictor, coefficient estimates are averaged only across those models that contain the predictor.  
+
+The model selection table now includes only the models in the subset, and the weights are adjusted accordingly (they will now sum to 1 for the subset):
+
+```{r}
+Models.avg$msTable
+```
+
+### c) Model-averaged confidence intervals for predictors
+
+In addition to averaging coeffient estimates, we can also get their confidence intervals as a weighted average across models. 
+
+Note: as with the coefficient estimates above, `full=FALSE` treats estimates for predictors not included in a model as NAs, whereas `full=FALSE` treats them as zeros.
+
+```{r}
+confint(Models.avg, full=FALSE, level = 0.95, method="Wald")
+confint(Models.avg, full=TRUE, level = 0.95, method="Wald")
+```
+
+**Question 7**:	How did model averaging affect the results and interpretation?
+
+### d) Quantify factor importance given a (sub)set of models
+
+Given the subset of models, we can get a measure of the importance of each predictor by summing the weights of all models that contain the predictor (see Week 7 video). 
+
+```{r}
+Models.avg$importance
+```
+
+Importance values will depend on the criterion used (e.g., AICc vs. BIC) and on the set or subset of models used. Here we plot importance values from the full set of models and from the subset (both were based on AICc). 
+
+Note: the function `importance` returns an object of class 'importance'. A simple way to extact the values as a named vector is to use the function `c()`. This can then be plotted with the generic function `barplot`. 
+
+```{r fig.show="hold", fig.width=8, fig.height=4}
+par(mfrow=c(1,2))
+barplot(c(Models.avg$importance), main="Subset of models", 
+        las=2, ylim=c(0,1), ylab="Importance")
+Importance <- MuMIn::model.avg(Models.table)$importance
+barplot(c(Importance), main="All models", las=2, ylim=c(0,1))
+```
+
+Or with `ggplot2`:
+
+```{r}
+Res <- c(Importance)
+ggplot() + aes(x=reorder(names(Res), -Res), y=Res) +
+  geom_bar(stat="identity") + xlab("") + ylab("Importance")
+```
+
+**Question 8**:	How does factor importance relate to model weights? What would you consider an 'important' predictor?
+
+
+## 4. Your turn to test additional hypotheses!
 
 Create your own (small) set of hypotheses to rank for evidence using the dataset provided. Modify the code above to complete the following steps: 
 
