--- a/vignettes/Week0_Reproducible_Research/Week0_BasicR.Rmd
+++ b/vignettes/Week0_Reproducible_Research/Week0_BasicR.Rmd
@@ -8,13 +8,14 @@ output:
     toc: yes
     fig_width: 4 
     fig_height: 3.5
+  rmarkdown:::md_document  
 vignette: >
   %\VignetteIndexEntry{Week 0: Intro to R Programming}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
 
-# 1. Overview 
+## 1. Overview 
 
 This worked example is adapted from "Applied Population Genetics" by Rodney Dyer. The entire book is available here: http://dyerlab.github.io/applied_population_genetics/index.html 
 
@@ -26,7 +27,7 @@ R is a statistical programming language, and it thus requires users to work with
 
 See also video "Week 0: Intro to R Notebooks" for options how to work this this document as .html or .Rmd.
 
-# 2. Data Types 
+## 2. Data Types 
 
 The data we work with comes in many forms—integers, stratum, categories, genotypes, etc.—all of which we need to be able to work with in our analyses. In this chapter, the basic data types we will commonly use in population genetic analyses.  This section covers some of the basic types of data we will use in R.  These include numbers, character, factors, and logical data types.  We will also introduce the locus object from the gstudio library and see how it is just another data type that we can manipulate in R.  
 
@@ -58,9 +59,9 @@ vignette()
 
 and vignettes for a particular package by passing the package name as an argument to the function itself.
 
-## 2.1. Numeric Data Types
+### 2.1. Numeric Data Types
 
-### a) Numeric data
+#### a) Numeric data
 
 The quantitative measurements we make are often numeric, in that they can be represented as as a number with a decimal component (think weight, height, latitude, soil moisture, ear wax viscosity, etc.).  The most basic type of data in R, is the numeric type and represents both integers and floating point numbers (n.b., there is a strict integer data type but it is often only needed when interfacing with other C libraries and can for what we are doing be disregarded).  
 
@@ -126,7 +127,7 @@ rchisq(10, df=1)
 
 There are several more distributions that if you need to access random numbers, quantiles, probability densities, and cumulative density values are available.
 
-### b) Coercion to Numeric
+#### b) Coercion to Numeric
 
 All data types have the potential ability to take another variable and coerce it into their type.  Some combinations make sense, and some do not.  For example, if you load in a CSV data file using read_csv(), and at some point a stray non-numeric character was inserted into one of the cells on your spreadsheet, R will interpret the entire column as a character type rather than as a numeric type.  This can be a very frustrating thing, spreadsheets should generally be considered evil as they do all kinds of stuff behind the scenes and make your life less awesome.
 
@@ -155,9 +156,9 @@ as.numeric( x )
 
 By default, the result should be NA (missing data/non-applicable) if you ask for things that are not possible.
 
-## 2.2. Characters
+### 2.2. Characters
 
-### a) Character data
+#### a) Character data
 
 A collection of letters, number, and or punctuation is represented as a character data type.  These are enclosed in either single or double quotes and are considered a single entity.  For example, my name can be represented as:
 
@@ -203,7 +204,7 @@ nchar(terms)
 ```
 
 
-### b) Concatenation of Characters
+#### b) Concatenation of Characters
 
 Another common use of characters is concatenating them into single sequences.  Here we use the function `paste()` and can set the separators (or characters that are inserted between entities when we collapse vectors).  Here is an example, entirely fictional and only provided for instructional purposes only.
 
@@ -221,7 +222,7 @@ paste(x,z)
 paste(x,z,sep=" not ")
 ```
 
-### c) Coercion to Characters
+#### c) Coercion to Characters
 
 A character data type is often the most basal type of data you can work with.  For example, consider the case where you have named sample locations.  These can be kept as a character data type or as a factor (see below).  There are benefits and drawbacks to each representation of the same data (see below).  By default (as of the version of R I am currently using when writing this book), if you use a function like read_table() to load in an external file, columns of character data will be treated as factors.  This can be good behavior if all you are doing is loading in data and running an analysis, or it can be a total pain in the backside if you are doing more manipulative analyses.
 
@@ -237,9 +238,9 @@ y <- as.character(x)
 y
 ```
 
-## 2.3. Factors
+### 2.3. Factors
 
-### a) Factor vs. Character
+#### a) Factor vs. Character
 
 A factor is a categorical data type.  If you are coming from SAS, these are class variables.  If you are not, then perhaps you can think of them as mutually exclusive classifications.  For example, an sample may be assigned to one particular locale, one particular region, and one particular species.  Across all the data you may have several species, regions, and locales.  These are finite, and defined, sets of categories. One of the more common headaches encountered by people new to R is working with factor types and trying to add categories that are not already defined.
 
@@ -282,7 +283,7 @@ region <- factor( region, ordered=TRUE, levels = c("West", "North", "South", "Ea
 region
 ```
 
-### b) Missing Levels in Factors
+#### b) Missing Levels in Factors
 
 There are times when you have a subset of data that do not have all the potential categories. 
 
@@ -297,7 +298,7 @@ table( subregion )
 
 
 
-## 2.4. Logical Types
+### 2.4. Logical Types
 
 A logical type is either TRUE or FALSE, there is no in-between.  It is common to use these types in making decisions (see if-else decisions) to check a specific condition being satisfied.  To define logical variables you can either use the TRUE or FALSE directly
 
@@ -352,11 +353,11 @@ data[ (1:20 %% 2) > 0 ]
 You can get as complicated in the creation of indices as you like, even using logical operators such as OR and AND. I leave that as an example for you to play with.  
 
 
-# 3. Data Containers 
+## 3. Data Containers 
 
 We almost never work with a single datum^[The word *data* is plural, datum is singular], rather we keep lots of data.  Moreover, the kinds of data are often heterogeneous, including categorical (Populations, Regions),  continuous (coordinates, rainfall, elevation), imagry (hyperspectral, LiDAR), and perhaps even genetic.  R has a very rich set of containers into which we can stuff our data as we work with it.  Here these container types are examined and the restrictions and benefits associated with each type are explained.
 
-## 3.1. Vectors
+### 3.1. Vectors
 
 We have already seen several examples of several vectors in action (see the introduction to Numeric data types for example).  A vector of objects is simply a collection of them, often created using the `c()` function (*c* for combine).  Vectorized data is restricted to having homogeneous data types---you cannot mix character and numeric types in the same vector.  If you try to mix types, R will either coerce your data into a reasonable type
 
@@ -443,7 +444,7 @@ rep(x,each=3)
 ```
 
 
-## 3.2. Matrices 
+### 3.2. Matrices 
 
 A matrix is a 2- or higher dimensional container, most commonly used to store numeric data types.  There are some libraries that use matrices in more than two dimensions (rows and columns and sheets), though you will not run across them too often.  Here I restrict myself to only 2-dimensional matrices.
 
@@ -563,7 +564,7 @@ indices
 ```
 
 
-## 3.3. Lists
+### 3.3. Lists
 
 A list is a type of vector but is indexed by ‘keys' rather than by numeric indices.  Moreover, lists can contain heterogeneous types of data (e.g., values of different `class`), which is not possible in a vector type.  For example, consider the list
 
@@ -636,9 +637,9 @@ theList[1,3]
 
 List are rather robust objects that allow you to store a wide variety of data types (including nested lists).  Once you get the indexing scheme down, it they will provide nice solutions for many of your computational needs.
 
-## 3.4. Data Frames
+### 3.4. Data Frames
 
-### a) Data Frames as spreadsheets
+#### a) Data Frames as spreadsheets
 
 The `data.frame` is the default data container in R.   It is analogous to both a spreadsheet, at least in the way that I have used spreadsheets in the past, as well as a database.  If you consider a single spreadsheet containing measurements and observations from your research, you may have many columns of data, each of which may be a different kind of data.  There may be `factors` representing designations such as species, regions, populations, sex, flower color, etc.  Other columns may contain numeric data types for items such as latitude, longitude, dbh, and nectar sugar content.  You may also have specialized columns such as dates collected, genetic loci, and any other information you may be collecting.  
 
@@ -664,7 +665,7 @@ summary(df)
 
 We can add columns of data to the data.frame after the fact using the `$`-operator to indicate the column name. Depending upon the data type, the summary will provide an overview of what is there.
 
-### b) Indexing Data Frames
+#### b) Indexing Data Frames
 
 You can access individual items within a `data.frame` by numeric index such as:
 
@@ -705,11 +706,11 @@ df$Names[df$Score > 90 & df$Passed_Class==TRUE]
 
 This is why `data.frame` objects are very database like.  They can contain lots of data and you can extract from them subsets that you need to work on.  This is a VERY important feature, one that is vital for reproducible research.  Keep you data in one and only one place.
 
-# 4. Programming 
+## 4. Programming 
 
 One of the strengths of R as an analysis platform is that it is a language rather than a program.  With programs, such as SPSS & JMP, you are limited by the functionality that the designers thought would be necessary to meet the broadest audience.  In R, you can rely upon simple functions or you can create entire analysis and simulation programs de novo.  To do this, we need to dig into flow control and decision making processes, both of which you need for doing more in-depth programming.
 
-## 4.1. Function Writing
+### 4.1. Function Writing
 
 Here we look at how to create an R function.  Writing small functions like this is a huge benefit to you as an analyst and this is a great place to start.  A function in R is defined as:
 
@@ -777,7 +778,7 @@ And it returns FALSE for the comparison between 128:128 and 132:132.
 potential_offspring(loc2, loc3)
 ```
 
-## 4.2. Variable Scope
+### 4.2. Variable Scope
 
 There is a lot more information on writing functions and we will get into that as we progress through the text.  However, it is important that I bring this up now.  The value assigned to a variable is defined by its scope.  Consider the following code
 ```{r}
@@ -795,11 +796,11 @@ do_it <- function( x ) {
 
 When I call the function, the variable x that is the argument of the function is not the same variable that is in the environment that I assigned a value of 10.  The x in the function argument is what we call “local to that function" in that within the curly brackets that follow (and any number of curly brackets nested within those, the value of x is given whatever was passed to the function.
 
-## 4.3. Decision Making
+### 4.3. Decision Making
 
 We interact with our data in many ways and introspection of the values we have in the variables we are working with are of prime importance.  Decision making in your code is where you evaluate your data and make a choice of outcomes based upon some criteria.  Here is some example data that we can use as we explore the basics of `if()`, `if(){} else{}`, and `if(){} elif(){} else{}` coding patterns.
 
-### a) The if Pattern  
+#### a) The if Pattern  
 
 The most basic version of decision making is asking a single question and if the answer is TRUE then do something.  The `if(){}` function does this and has the form
 
@@ -864,7 +865,7 @@ ans
 
 So iterating through the x vector, the condition `x>0` is evaluated and if TRUE the sqrt() of the value is returned, else the NA is given. It is compact and easy to use so you may run into it often.
 
-### b) The `if-else` Pattern
+#### b) The `if-else` Pattern
 
 It is possible to test many conditions in a single sequence by stringing together else-if conditions.  The point that is important here is that the first condition that evaluates to TRUE will be executed and all remaining ones will be skipped, even if they also are logically TRUE.  This means that it is important to figure out the proper order of asking your conditions.  Here is an example function that determines if none, one, or both of the genotypes passed to it are heterozygotes.  By default, I step through every one of the potential options of available on this comparison.    
 1. The first is a heterozygote and the second one isn't
@@ -890,11 +891,11 @@ which_is_het <- function( A, B) {
 
 It is possible that the order of these CRITERIA could be changed, the important thing to remember is that the sequence of if - else if - else if etc. will terminate the very first time one of the CRITERIA is evaluated to be `TRUE`.
 
-## 4.4. Flow Control
+### 4.4. Flow Control
 
 Flow control is the process of iterating across objects and perhaps doing operations on those objects.  The R language has several mechanisms that you can use to control the flow of a script or bit of code.  
 
-### a) The for() Loop
+#### a) The for() Loop
 
 ```{r}
 x <- c(3,8,5,4,6)
@@ -939,7 +940,7 @@ for( i in 1:length(x)){
 }
 ```
 
-### b) Short Circuiting the Loop
+#### b) Short Circuiting the Loop
 
 It is possible to short circuit the looping process using the keywords next and break, though in my programming style, I consider their use in my source files as evidence of inelegant code.  That said, you may need them on occasion.  
 
